<resources>
    <string name="app_name">FitnessUnibs</string>
    <string name="primoAccesso">Primo accesso</string>
    <string name="lingua">Lingua</string>
    <string name="immagine">Immagine</string>
    <string name="cambiaNomeUtente">Cambia nome utente</string>
    <string name="modificaLingua">Modifica lingua</string>
    <string name="nomeUtente">Nome utente</string>
    <string name="cognome">Cognome</string>
    <string name="eta">Età</string>
    <string name="sesso">Sesso</string>
    <string name="datiPersonali">Dati personali</string>
    <string name="nome">Nome</string>
    <string name="inserisciNome">Inserisci il tuo nome</string>
    <string name="inserisciCognome">Inserisci il tuo cognome</string>
    <string name="inserisciEta">Inserisci la tua età</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="ripristina">Ripristina</string>
    <string name="salva">Salva</string>
    <string name="addominali">Addominali</string>
    <string name="flessioni">Flessioni</string>
    <string name="squat">Squat</string>
    <string name="playlist">Playlist</string>
    <string name="storico">Storico</string>
    <string name="statistiche">Statistiche</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="valutaci">Valutaci</string>
    <string name="riconoscimenti">Riconoscimenti</string>
    <string name="drawer_opened">Aperto</string>
    <string name="drawer_closed">Close</string>
    <string name="uscitaSicura">Sicuro di voler uscire ?</string>
    <string name="sicuro">Sicuro</string>
    <string name="annulla">Annulla</string>
    <string name="data">Data</string>
    <string name="tipoEsercizio">Tipo esercizio</string>
    <string name="ripetizioniAttivita">Ripetizioni</string>
    <string name="durata">Durata</string>
    <string name="seriePersonalizzata">Serie personalizzata</string>
    <string name="saltaPausa">Salta pausa</string>
    <string name="abbandona">Abbandona</string>
    <string name="partenza">Partenza</string>
    <string name="pausa">Pausa</string>
    <string name="pochiDati">Dati inseriti insufficienti</string>
    <string name="salvataggioErrore">Salvataggio NON riuscito</string>
    <string name="nuovaPlaylist">Nuova playlist</string>
    <string name="inserireNomePlaylist">Inserire il nome della Playlist</string>
    <string name="serie">Serie</string>
    <string name="salvataggioRiuscito">Salvataggio\nriuscito</string>
    <string name="fotocamera">Fotocamera</string>
    <string name="rimanenti">Rimangono</string>
    <string name="finito">Finito!</string>
    <string name="ripartenza">Riprendi</string>
    <string name="prontoIniziare">Pronto a iniziare ?</string>
    <string name="statisticheAddominali">Addominali compiuti</string>
    <string name="statisticheFlessioni">Flessioni totali:</string>
    <string name="statisticheSquat">Squat totali:</string>
    <string name="manutenzione">In manutenzione…</string>
    <string name="inserireRipetizioni">Numero di ripetizioni</string>
    <string name="inserireSerie">Numero di serie</string>
    <string name="errore">Errore!</string>
    <string name="conferma">Conferma</string>
    <string name="riposati">RIPOSATI</string>
    <string name="home">Home</string>
    <string name="rinonoscimento">LABATE THOMAS E MELATO SIMONE VI RINGRAZIANO PER AVER SCELTO LA MIGLIOR APPLICAZIONE PER IL FITNESS!!!</string>
    <string name="datiCancellati">I dati sono stati cancellati!</string>
    <string name="mancaFoto">Manca la foto!</string>
    <string name="aiuto">Aiuto</string>
    <string name="menuLaterale">Menu</string>
    <string name="nomeActivity">Nome Activity</string>
    <string name="fragment_home">SCHERMATA PRINCIPALE:\nScegli una delle tre attività o crea una playlist!</string>
    <string name="fragment_serie">SCHERMATA SERIE:\nScegli una serie proposta o creane una per te!</string>
    <string name="fragment_playlist">SCHERMATA PLAYLIST:\nCrea la tua playlist e provala subito!</string>
    <string name="menu">Menù</string>
    <string name="modificaDati">Modifica dati</string>
    <string name="elimina">Elimina</string>
    <string name="elimaElemento">Seleziona un elemento da eliminare!</string>
    <string name="chiudiConsiglio">Per chiudere questo consiglio premi nuovamente su \"Aiuto\"</string>
    <string name="fragment_flessioni">Posiziona il telefono sul pavimento e scendi toccando lo schermo con il naso</string>
    <string name="fragment_squat">Tieni il telefono di fronte a te a scendi facendo lo squat</string>
    <string name="fragment_addominali">Posiziona il telefono vicino al mento ed esegui l\'esercizio</string>
    <string name="nomePunti">Nome:</string>
    <string name="cognomePunti">Cognome:</string>
    <string name="aiutoSvolgi">Aiuto svolgimento</string>
    <string name="quindiciSecondi">15 secondi</string>
    <string name="decisette">17</string>
    <string name="tempoTotaleFormat">Tempo totale impiegato %02d:%02d </string>
    <string name="aggiorna">Aggiorna</string>
    <string name="aiutoInserimentoNuovoNome">Nuovo nome</string>
    <string name="NomeUtente">Nome utente</string>
    <string name="tornaEsercizi">Sicuro di voler tornare alla scelta degli esercizi?</string>
    <string name="numeroSerie">Numero serie</string>
    <string name="premereInziare">Premere il bottone per Iniziare!</string>
    <string name="valutazione">Dacci un bel po di stelline</string>
    <string name="nuovaSerie">Nuova serie</string>
    <string name="tornaHome">Torna Home</string>
    <string name="tornaSceltaAttivita">Torna agli Esercizi</string>
    <string name="tempoPausaFinale">17</string>
    <string name="ripetizioniFatte">Ripetizioni: %%02d</string>
</resources>
