<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/stoMenuLaterale"
            android:checked="false"
            android:title="@string/storico"
            android:icon="@android:drawable/ic_menu_today"/>
        <item
            android:id="@+id/statMenuLaterale"
            android:checked="false"
            android:title="@string/statistiche"
            android:icon="@android:drawable/ic_menu_sort_by_size"/>

        <item
            android:id="@+id/impoMenuLaterale"
            android:checked="false"
            android:title="@string/impostazioni"
            android:icon="@android:drawable/ic_input_get"/>
        <item
            android:id="@+id/valuMenuLaterale"
            android:checked="false"
            android:title="@string/valutaci"
            android:icon="@android:drawable/btn_star_big_on"/>
        <item
            android:id="@+id/ricoMenuLaterale"
            android:checked="false"
            android:title="@string/riconoscimenti"
            android:icon="@android:drawable/ic_dialog_info" />
    </group>
</menu>