<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="190dp"
    android:background="@color/grigiochiaro"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialogtxtSerieNuovaSerie"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="@dimen/piccola"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/serie"
            android:textColor="@color/arancio"
            android:textSize="@dimen/testiMicro"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/dialogEtxtSerieNuovaSerie"
            android:layout_width="0dp"
            android:textColor="@color/rosso"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/piccola"
            android:layout_marginLeft="@dimen/piccola"
            android:layout_marginRight="15dp"
            android:layout_weight="2"
            android:hint="@string/inserireRipetizioni"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialogTxtRipetizioniNuovaSerie"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="@dimen/piccola"
            android:layout_weight="1.09"
            android:gravity="center_vertical"
            android:text="@string/ripetizioniAttivita"
            android:textColor="@color/arancio"
            android:textSize="@dimen/testiMicro"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/dialogEtxtRipetizioniNuovaSerie"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/piccola"
            android:layout_marginLeft="@dimen/piccola"
            android:layout_marginRight="15dp"
            android:layout_weight="2"
            android:textColor="@color/rosso"
            android:hint="@string/inserireSerie"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/dialogoSalvaNuovaSerie"
            style="@style/dialogo"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/salva" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>