<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#d2be2105"
    android:id="@+id/linearFragmentHome"
    android:onClick="onClickNascondiFragment">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="14dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@android:drawable/stat_sys_upload" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                android:textColor="@color/bianco" />


        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="274dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@android:drawable/stat_sys_upload" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aiuto"
                android:textAlignment="textStart"
                android:textColor="@color/bianco" />
        </LinearLayout>



    </LinearLayout>

    <TextView
        android:id="@+id/mar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170sp"
        android:text="@string/fragment_home"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Notification"
        android:textColor="@color/bianco"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="172dp"
        android:text="@string/chiudiConsiglio"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/giallo"
        android:textSize="12sp"
        android:textStyle="bold|italic"/>
</LinearLayout>
