<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@color/Sfondo"
tools:context="it.unibs.ing.fp.fitnessunibs.InserimentoDati">
    <LinearLayout
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:gravity="center"
    android:orientation="vertical">
        <TextView
            android:id="@+id/txtStatisticheAddominali"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/piccola"
            android:layout_marginStart="@dimen/piccola"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/statisticheAddominali"
            android:textColor="@color/nero"
            android:textSize="@dimen/testiMicro"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtStatisticheFlessioni"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/piccola"
            android:layout_marginStart="@dimen/piccola"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/statisticheFlessioni"
            android:textColor="@color/nero"
            android:textColorLink="@color/arancio"
            android:textSize="@dimen/testiMicro"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtStatisticheSquat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/piccola"
            android:layout_marginStart="@dimen/piccola"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/statisticheSquat"
            android:textColor="@color/nero"
            android:textColorLink="@color/arancio"
            android:textSize="@dimen/testiMicro"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
